HHQ-1120 - fix for overlapping username in the masthead and too much padding in the navigation

--- a/web/css/iecss.css
+++ b/web/css/iecss.css
@@ -5,3 +5,8 @@
 .dojoMenuBar2 .dojoMenuItem2 {
     padding:3px 15px 3px;
 }
+
+.headUsrName {
+    font-size:10px;
+    width:210px;
+}
